syntax = "proto3";

package mangahub.v1;

option go_package = "mangahub/internal/protocols/grpc/pb;pb";

import "google/protobuf/timestamp.proto";

service MangaService {
  rpc StreamSearch(SearchRequest) returns (stream MangaResponse); // Real-time streaming search
  rpc SearchManga(SearchRequest) returns (SearchResponse);
  rpc GetManga(GetMangaRequest) returns (MangaResponse);

  // Extra RPCs currently implemented in service.go
  rpc GetTrendingManga(TrendingRequest) returns (TrendingResponse);
  rpc AutoSuggest(AutoSuggestRequest) returns (AutoSuggestResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message SearchRequest {
  string query = 1;        // FTS query
  int32 limit = 2;         // Max results (default 20)
  int32 offset = 3;        // Pagination offset
  repeated string genre_ids = 4; // matches req.GenreIds in service
  string status = 5;       // Status filter
}

message MangaResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string cover_url = 4;
  string status = 5;
  repeated Genre genres = 6; // matches pb.Genre in service
  int32 comment_count = 7;
  int32 chat_count = 8;
  int32 weekly_score = 9;
  google.protobuf.Timestamp created_at = 10;
  float relevance_score = 11;
}

message Genre {
  string id = 1;
  string name = 2;
}

message SearchResponse {
  repeated MangaResponse manga = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
  bool has_more = 5;
}

message GetMangaRequest {
  string manga_id = 1;
}

message TrendingRequest {
  int32 limit = 1;
}

message TrendingResponse {
  repeated MangaResponse manga = 1;
}

message AutoSuggestRequest {
  string prefix = 1;
  int32 limit = 2;
}

message AutoSuggestResponse {
  repeated string suggestions = 1;
}

message HealthCheckRequest {}

enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  SERVING = 1;
  NOT_SERVING = 2;
}

message HealthCheckResponse {
  HealthStatus status = 1;
  string message = 2;
  string version = 3;
  int64 uptime = 4;
}
